--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 		<title>Road to Mastering JavaScript</title>
 	</head>
 	<body>
+		<div class="container">
+			<h1 id="heading">This is a heading</h1>
+		</div>
+
 		<script src="./js/app.js"></script>
 	</body>
 </html>
