--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/styles.css" />
 		<title>Road to Mastering JavaScript</title>
 	</head>
 	<body>
 		<div class="container">
 			<h1 id="heading">This is a heading</h1>
 		</div>
-
+		<div class="section">
+			<h3 class="click-me">Please Click me</h3>
+		</div>
+		<div class="display hidden">
+			<h1>You Clicked me</h1>
+		</div>
 		<script src="./js/app.js"></script>
 	</body>
 </html>
