--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div class="display hidden">
 			<h1>You Clicked me</h1>
 		</div>
-		<script src="./js/app.js"></script>
+		<!-- <script src="./js/app.js"></script> -->
+		<script src="./js/app1.js"></script>
 	</body>
 </html>
