--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		<div class="display hidden">
 			<h1>You Clicked me</h1>
 		</div>
+		<div class="displayTable">
+			<div class="box"><span>2</span>*<span>2</span>=<span>4</span></div>
+		</div>
 		<!-- <script src="./js/app.js"></script> -->
 		<script src="./js/app1.js"></script>
 	</body>
