--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<div class="box"><span>2</span>*<span>2</span>=<span>4</span></div>
 		</div>
 		<!-- <script src="./js/app.js"></script> -->
-		<script src="./js/app1.js"></script>
+		<!-- <script src="./js/app1.js"></script> -->
+		<script src="./js/app2.js"></script>
 	</body>
 </html>
